--- a/index.html
+++ b/index.html
@@ -122,22 +122,28 @@
 
         <!-------------- About --------------->
         <section class="about" id="about">
-            <div class="about-img">
-                <img
-                    src="./img/—Pngtree—web developer isometric illustration_6067558.png"
-                    alt=""
-                />
+            <div class="heading">
+                <h3>About</h3>
+                <h2>Hello there!</h2>
             </div>
-            <div class="about-text">
-                <h3>Hello there! I'm Adnan Hussain</h3>
-                <h2>I am a Backend developer</h2>
-                <p>
-                    I'm very passionate and dedicated to my work. I have
-                    acquired the skills and knowledge necessary to make your
-                    project a success. I like to create sketches and I'm always
-                    curious to learn more about new technologies and creative
-                    coding.
-                </p>
+            <div class="about-content">
+                <div class="about-img">
+                    <img
+                        src="./img/—Pngtree—web developer isometric illustration_6067558.png"
+                        alt=""
+                    />
+                </div>
+                <div class="about-text">
+                    <h3>I'm Adnan Hussain</h3>
+                    <h2>I am a Backend developer</h2>
+                    <p>
+                        I'm very passionate and dedicated to my work. I have
+                        acquired the skills and knowledge necessary to make your
+                        project a success. I like to create sketches and I'm
+                        always curious to learn more about new technologies and
+                        creative coding.
+                    </p>
+                </div>
             </div>
         </section>
 
@@ -284,12 +290,6 @@
 
         <!-------------- work --------------->
         <section class="cta">
-            <div class="heading">
-                <h2>
-                    1200+ hours of <br />
-                    Coding
-                </h2>
-            </div>
             <div class="cta-box">
                 <div class="wrap one">
                     <h3>1200+</h3>
@@ -327,8 +327,8 @@
                 <form>
                     <input type="text" placeholder="Enter your name" />
                     <input type="email" placeholder="Enter your email" />
-                    <input type="text" placeholder="Enter your massage" />
-                    <input id="tbtn" type="submit" value="Let's talk">
+                    <input id="msg" type="text" placeholder="Enter your massage" />
+                    <input id="tbtn" type="submit" value="Let's talk" />
                 </form>
             </div>
         </section>
