--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
                 <form>
                     <input type="text" placeholder="Enter your name" />
                     <input type="email" placeholder="Enter your email" />
-                    <input id="msg" type="text" placeholder="Enter your massage" />
+                    <textarea type="text" placeholder="Enter your massage" cols="30" rows="10"></textarea>
                     <input id="tbtn" type="submit" value="Let's talk" />
                 </form>
             </div>
@@ -342,12 +342,3 @@
         <script src="./theme.js"></script>
     </body>
 </html>
-
-<!-- 
-
-    need to add color changing main color
-    which should change color every 10s 
-    I have to use local DOM
-    Let's see whether it will work or not
-
- -->
