--- a/index.html
+++ b/index.html
@@ -142,6 +142,11 @@
                         project a success. I like to create sketches and I'm
                         always curious to learn more about new technologies and
                         creative coding.
+                        <br>
+                        I have clear, logical mind with a practical approach to
+                        problem-solving and a drive to see things through to
+                        completion. I have work experience in multiple project
+                        and clone project with team collaboration.
                     </p>
                 </div>
             </div>
@@ -327,7 +332,12 @@
                 <form>
                     <input type="text" placeholder="Enter your name" />
                     <input type="email" placeholder="Enter your email" />
-                    <textarea type="text" placeholder="Enter your massage" cols="30" rows="10"></textarea>
+                    <textarea
+                        type="text"
+                        placeholder="Enter your massage"
+                        cols="30"
+                        rows="10"
+                    ></textarea>
                     <input id="tbtn" type="submit" value="Let's talk" />
                 </form>
             </div>
