--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             crossorigin="anonymous"
         ></script>
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+        />
     </head>
     <body>
         <!------------- Header ----------------->
@@ -142,7 +146,7 @@
                         project a success. I like to create sketches and I'm
                         always curious to learn more about new technologies and
                         creative coding.
-                        <br>
+                        <br />
                         I have clear, logical mind with a practical approach to
                         problem-solving and a drive to see things through to
                         completion. I have work experience in multiple project
@@ -311,27 +315,37 @@
             </div>
         </section>
 
-        <!-- <section class="github">
+        <section class="github">
             <div class="heading">
                 <h3>Github</h3>
-                <h2>
-                    Calander & Stats
-                </h2>
+                <h2>Calander & Stats</h2>
             </div>
             <div class="git-container">
-
+                <div class="calendar">
+                    <!-- Loading stuff -->
+                    Loading the data just for you.
+                </div>
             </div>
-        </section> -->
+        </section>
 
         <!-------------- Contact --------------->
         <section class="contact" id="contact">
             <div class="heading">
-                <h2>Contact Me</h2>
+                <h3>Contact</h3>
+                <h2>Get in touch</h2>
             </div>
             <div class="form">
-                <form>
-                    <input type="text" placeholder="Enter your name" />
-                    <input type="email" placeholder="Enter your email" />
+                <form onsubmit="sendEmail(); reset(); return false">
+                    <input
+                        id="name"
+                        type="text"
+                        placeholder="Enter your name"
+                    />
+                    <input
+                        id="mail"
+                        type="email"
+                        placeholder="Enter your email"
+                    />
                     <textarea
                         type="text"
                         placeholder="Enter your massage"
@@ -350,5 +364,23 @@
         <script src="https://unpkg.com/scrollreveal"></script>
         <script type="text/javascript" src="./index.js"></script>
         <script src="./theme.js"></script>
+        <script src="https://smtpjs.com/v3/smtp.js"></script>
+        <script src="form.js"></script>
+        <script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
+        <script>
+            GitHubCalendar(".calendar", "adnan25042001");
+
+            // or enable responsive functionality:
+            GitHubCalendar(".calendar", "adnan25042001", { responsive: true });
+
+            // Use a proxy
+            GitHubCalendar(".calendar", "adnan25042001", {
+                proxy(username) {
+                    return fetch(
+                        `https://your-proxy.com/github?user=${username}`
+                    );
+                },
+            }).then((r) => r.text());
+        </script>
     </body>
 </html>
