--- a/index.html
+++ b/index.html
@@ -325,6 +325,8 @@
                     <!-- Loading stuff -->
                     Loading the data just for you.
                 </div>
+                <!-- <a href="https://github.com/adnan25042001"><img src="https://github-readme-stats.vercel.app/api/top-langs/?username=adnan25042001&amp;theme=transparent&amp;hide_border=true&amp;layout=compact" alt="language"></a> -->
+                <a href="https://github.com/adnan25042001"><img src="https://github-readme-stats.vercel.app/api?username=adnan25042001&amp;show_icons=true&amp;locale=en&amp;theme=transparent&amp;hide_border=true&amp;bg_color=161616" alt=""></a>
             </div>
         </section>
 
