--- a/index.html
+++ b/index.html
@@ -291,6 +291,14 @@
                     <img src="./img/icons8-github.svg" alt="" />
                     <h3>Github</h3>
                 </div>
+                <div class="tech">
+                    <img src="./img/netlify-svgrepo-com.svg" alt="" />
+                    <h3>Github</h3>
+                </div>
+                <div class="tech">
+                    <img src="./img/postman-icon-svgrepo-com.svg" alt="" />
+                    <h3>Github</h3>
+                </div>
             </div>
         </section>
 
@@ -313,12 +321,12 @@
         </section>
 
         <section class="github">
-            <div class="heading">
+            <!-- <div class="heading">
                 <h3>Github</h3>
                 <h2>Calander & Stats</h2>
             </div>
             <div class="git-container">
-            </div>
+            </div> -->
         </section>
 
         <!-------------- Contact --------------->
