--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="home-text">
                 <h3>Hello, I'm</h3>
                 <h1>Adnan Hussain</h1>
-                <h5>Java Backend Developr <span>from India</span></h5>
+                <h5>Java Developr <span>from India</span></h5>
                 <p>
                     I'm always interested about cool stuff. <br />
                     Are you minding a project? <br />
@@ -136,7 +136,7 @@
                 </div>
                 <div class="about-text">
                     <h3>I'm Adnan Hussain</h3>
-                    <h2>I am a Backend developer</h2>
+                    <h2>I am a Java developer</h2>
                     <p>
                         I'm very passionate and dedicated to my work. I have
                         acquired the skills and knowledge necessary to make your
