--- a/index.html
+++ b/index.html
@@ -293,11 +293,15 @@
                 </div>
                 <div class="tech">
                     <img src="./img/netlify-svgrepo-com.svg" alt="" />
-                    <h3>Github</h3>
+                    <h3>Netlify</h3>
                 </div>
                 <div class="tech">
                     <img src="./img/postman-icon-svgrepo-com.svg" alt="" />
-                    <h3>Github</h3>
+                    <h3>Postman</h3>
+                </div>
+                <div class="tech">
+                    <img src="./img/aws-svgrepo-com.svg" alt="" />
+                    <h3>aws</h3>
                 </div>
             </div>
         </section>
