--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
             crossorigin="anonymous"
         ></script>
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
-        
     </head>
     <body>
         <!------------- Header ----------------->
@@ -76,10 +75,11 @@
                 >
             </div>
             <div class="home-img">
-                <img
+                <img src="img/myImage.jpeg" alt="" />
+                <!-- <img
                     src="https://mobulous.s3.ap-south-1.amazonaws.com/Web/images/mobile/Header/Hire-Developer-7.png"
                     alt=""
-                />
+                /> -->
             </div>
         </section>
 
