--- a/index.html
+++ b/index.html
@@ -76,10 +76,6 @@
             </div>
             <div class="home-img">
                 <img src="img/myImage.jpeg" alt="" />
-                <!-- <img
-                    src="https://mobulous.s3.ap-south-1.amazonaws.com/Web/images/mobile/Header/Hire-Developer-7.png"
-                    alt=""
-                /> -->
             </div>
         </section>
 
@@ -165,6 +161,33 @@
                 </p>
             </div>
             <div class="portfolio-content">
+                <div class="col">
+                    <img src="./img/TenderVendor.png" alt="" />
+                    <div class="layer">
+                        <h3>TenderVendor</h3>
+                        <p>
+                            TenderVendor is a console based application where
+                            admin can create tenders and user can bid on any
+                            tendor.
+                        </p>
+                        <p>
+                            <span>Tech Stacks :- </span> Java, JDBC, MySQL
+                        </p>
+                        <div>
+                            <a
+                                href="https://drive.google.com/file/d/1lenI4jVValU5IBOHWntha2ewcQy9rCzs/view?usp=share_link"
+                                target="_blank"
+                                >Video</a
+                            >
+                            <a
+                                href="https://github.com/adnan25042001/opposite-representative-709"
+                                target="_blank"
+                                >Code</a
+                            >
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col">
                     <img src="./img/monday.com.png" alt="" />
                     <div class="layer">
@@ -369,6 +392,6 @@
         <script src="https://unpkg.com/scrollreveal"></script>
         <script type="text/javascript" src="./index.js"></script>
         <script src="./theme.js"></script>
-        <script src="form.js"></script>
+        <script src="./form.js"></script>
     </body>
 </html>
