--- a/index.html
+++ b/index.html
@@ -347,14 +347,14 @@
             </div>
         </section>
 
-        <section class="github">
-            <!-- <div class="heading">
+        <!-- <section class="github">
+             <div class="heading">
                 <h3>Github</h3>
                 <h2>Calander & Stats</h2>
             </div>
             <div class="git-container">
-            </div> -->
-        </section>
+            </div> 
+        </section> -->
 
         <!-------------- Contact --------------->
         <section class="contact" id="contact">
