--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
             crossorigin="anonymous"
         ></script>
         <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+        <link
+            rel="stylesheet"
+            href="https://unpkg.com/github-calendar@latest/dist/github-calendar-responsive.css"
+        />
     </head>
     <body>
         <!------------- Header ----------------->
@@ -170,9 +174,7 @@
                             admin can create tenders and user can bid on any
                             tendor.
                         </p>
-                        <p>
-                            <span>Tech Stacks :- </span> Java, JDBC, MySQL
-                        </p>
+                        <p><span>Tech Stacks :- </span> Java, JDBC, MySQL</p>
                         <div>
                             <a
                                 href="https://drive.google.com/file/d/1lenI4jVValU5IBOHWntha2ewcQy9rCzs/view?usp=share_link"
@@ -347,14 +349,23 @@
             </div>
         </section>
 
-        <!-- <section class="github">
-             <div class="heading">
+        <section class="github">
+            <div class="heading">
                 <h3>Github</h3>
                 <h2>Calander & Stats</h2>
             </div>
             <div class="git-container">
-            </div> 
-        </section> -->
+                <div class="calendar"></div>
+                <div class="git">
+                    <img
+                        src="https://github-readme-stats.vercel.app/api?username=adnan25042001&show_icons=true&theme=transparent"
+                    />
+                    <img
+                        src="https://github-readme-stats.vercel.app/api/top-langs/?username=adnan25042001&theme=transparent"
+                    />
+                </div>
+            </div>
+        </section>
 
         <!-------------- Contact --------------->
         <section class="contact" id="contact">
@@ -395,3 +406,10 @@
         <script src="./form.js"></script>
     </body>
 </html>
+
+<script src="https://unpkg.com/github-calendar@latest/dist/github-calendar.min.js"></script>
+
+<script>
+    GitHubCalendar(".calendar", "adnan25042001");
+    GitHubCalendar(".calendar", "adnan25042001", { responsive: true });
+</script>
