added github Calender

--- a/index.html
+++ b/index.html
@@ -378,6 +378,22 @@
                 <h2>Get in touch</h2>
             </div>
             <div class="form">
+                <h3 id="mobile" style="margin-bottom: 0px;">8586857610</h3>
+                <div class="social">
+                    <a
+                        href="https://www.linkedin.com/in/adnanhussain0425/"
+                        target="_blank"
+                        ><i class="bx bxl-linkedin"></i
+                    ></a>
+                    <a href="https://github.com/adnan25042001" target="_blank"
+                        ><i class="bx bxl-github"></i
+                    ></a>
+                    <a
+                        href="mailto:adnan.hussain.136660@gmail.com"
+                        target="_blank"
+                        ><i class="bx bxl-gmail"></i
+                    ></a>
+                </div>
                 <form>
                     <input
                         id="name"
