updated form and main color

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <script src="https://smtpjs.com/v3/smtp.js"></script>
     </head>
     <body>
+        <script src="./theme.js"></script>
         <!------------- Header ----------------->
         <header>
             <a href="#" class="logo">Adnan <span>Hussain</span></a>
@@ -57,7 +58,6 @@
                     Are you minding a project? <br />
                     Let's talk.
                 </p>
-                <h3 id="mobile" style="margin-bottom: 20px;">8586857610</h3>
                 <div class="social">
                     <a
                         href="https://www.linkedin.com/in/adnanhussain0425/"
@@ -378,7 +378,7 @@
                 <h2>Get in touch</h2>
             </div>
             <div class="form">
-                <h3 id="mobile" style="margin-bottom: 0px;">8586857610</h3>
+                <h3 id="mobile" style="margin-bottom: 0px">8586857610</h3>
                 <div class="social">
                     <a
                         href="https://www.linkedin.com/in/adnanhussain0425/"
@@ -423,7 +423,6 @@
 
         <script src="https://unpkg.com/scrollreveal"></script>
         <script type="text/javascript" src="./index.js"></script>
-        <script src="./theme.js"></script>
         <script src="./form.js"></script>
     </body>
 </html>
