--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <ul class="navlist">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Project</a></li>
+                <li><a href="#portfolio">Portfolio</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li>
@@ -160,11 +160,6 @@
             <div class="heading">
                 <h3>Portfolio</h3>
                 <h2>My Amazing Work</h2>
-                <p>
-                    Most common methods for designing websites that work well on
-                    desktop is <br />
-                    rsponsive and adaptive design
-                </p>
             </div>
             <div class="portfolio-content">
                 <div class="col">
