--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
                     ></a>
                 </div>
                 <a
-                    href="https://www.linkedin.com/in/adnanhussain0425/"
+                    href="./download/Adnan_Hussain_Resume.pdf"
                     class="btn"
                     id="abt_btn"
+                    download
                     >Download CV</a
                 >
             </div>
