--- a/index.html
+++ b/index.html
@@ -308,6 +308,10 @@
                     <h3>Spring</h3>
                 </div>
                 <div class="tech">
+                    <img src="./img/pngaaa.com-4144220.png" alt="" />
+                    <h3>SpringBoot</h3>
+                </div>
+                <div class="tech">
                     <img src="./img/MySQL-Logo.wine.svg" alt="" />
                     <h3>MySQL</h3>
                 </div>
