updated skills section

--- a/index.html
+++ b/index.html
@@ -327,10 +327,10 @@
                     <img src="./img/postman-icon-svgrepo-com.svg" alt="" />
                     <h3>Postman</h3>
                 </div>
-                <div class="tech">
+                <!-- <div class="tech">
                     <img src="./img/aws-svgrepo-com.svg" alt="" />
                     <h3>aws</h3>
-                </div>
+                </div> -->
             </div>
         </section>
 
