updted home and form section

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap"
             rel="stylesheet"
         />
-        <title>Adnan Hussain | Java Developer</title>
+        <title>Adnan Hussain | Full Stack Developer</title>
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
         <script
             src="https://kit.fontawesome.com/f29fdf8ecb.js"
@@ -44,6 +44,7 @@
                         >Download CV</a
                     >
                 </li>
+                <!-- <li><img id="theme-icon" src="./img/moon.png" alt="" /></li> -->
             </ul>
         </header>
 
@@ -52,7 +53,7 @@
             <div class="home-text">
                 <h3>Hello, I'm</h3>
                 <h1>Adnan Hussain</h1>
-                <h5>Java Developr <span>from India</span></h5>
+                <h5>Full Stack Developer <span>from India</span></h5>
                 <p>
                     I'm always interested about cool stuff. <br />
                     Are you minding a project? <br />
@@ -82,12 +83,12 @@
                 >
             </div>
             <div class="home-img">
-                <img src="img/myImage.jpeg" alt="" />
+                <img src="img/MyNewImg.png" alt="" />
             </div>
         </section>
 
         <!---------------- Sub Services  ------------------->
-        <section class="sub-services">
+        <!-- <section class="sub-services">
             <div class="items">
                 <div class="sub-box">
                     <div class="sub-img">
@@ -122,7 +123,7 @@
                     </p>
                 </div>
             </div>
-        </section>
+        </section> -->
 
         <!-------------- About --------------->
         <section class="about" id="about">
@@ -133,19 +134,23 @@
             <div class="about-content">
                 <div class="about-img">
                     <img
-                        src="./img/—Pngtree—web developer isometric illustration_6067558.png"
+                        src="./img/marginalia-programming.gif"
                         alt=""
                     />
                 </div>
                 <div class="about-text">
                     <h3>I'm Adnan Hussain</h3>
-                    <h2>I am a Java developer</h2>
+                    <h2>I am a Full Stack Developer</h2>
                     <p>
                         I'm very passionate and dedicated to my work. I have
                         acquired the skills and knowledge necessary to make your
                         project a success. I like to create sketches and I'm
                         always curious to learn more about new technologies and
                         creative coding.
+                        <br />
+                        My field of interest are building new Web Technologies
+                        and Products and also in areas related to Deep Learning
+                        and Natural Launguage Processing.
                         <br />
                         I have clear, logical mind with a practical approach to
                         problem-solving and a drive to see things through to
@@ -163,6 +168,34 @@
                 <h2>My Amazing Work</h2>
             </div>
             <div class="portfolio-content">
+                <div class="col">
+                    <img src="./img/bigstore.png" alt="" />
+                    <div class="layer">
+                        <h3>BIGSTORE.</h3>
+                        <p>
+                            BIGSTORE is a e-commerse website that is expertly
+                            curated by the best luxury fashion brands and
+                            boutiques.
+                        </p>
+                        <p>
+                            <span>Tech Stacks :- </span> React, CSS, Strapi,
+                            Stripe, NodeJs
+                        </p>
+                        <div>
+                            <a
+                                href="https://bigstore-auxi.onrender.com/"
+                                target="_blank"
+                                >Live</a
+                            >
+                            <a
+                                href="https://github.com/adnan25042001/bigstore"
+                                target="_blank"
+                                >Code</a
+                            >
+                        </div>
+                    </div>
+                </div>
+
                 <div class="col">
                     <img src="./img/swagger img.png" alt="" />
                     <div class="layer">
@@ -236,33 +269,6 @@
                             >
                             <a
                                 href="https://github.com/adnan25042001/kaput-chin-6583"
-                                target="_blank"
-                                >Code</a
-                            >
-                        </div>
-                    </div>
-                </div>
-
-                <div class="col">
-                    <img src="./img/AirGarage.png" alt="" />
-                    <div class="layer">
-                        <h3>AirGarage Clone</h3>
-                        <p>
-                            AirGarage is a full stack parking operator that
-                            helps real estate owners monetize their parking
-                            assets.
-                        </p>
-                        <p>
-                            <span>Tech Stacks :- </span> HTML, CSS, JavaScript
-                        </p>
-                        <div>
-                            <a
-                                href="https://stalwart-bubblegum-b84037.netlify.app/"
-                                target="_blank"
-                                >Live</a
-                            >
-                            <a
-                                href="https://github.com/adnan25042001/vague-acoustics-7371"
                                 target="_blank"
                                 >Code</a
                             >
@@ -380,9 +386,7 @@
             </div>
             <div class="form">
                 <div id="left">
-                    <h3 id="mobile">
-                        +91 8586857610
-                    </h3>
+                    <h3 id="mobile">+91 8586857610</h3>
                     <div id="social">
                         <a
                             href="https://www.linkedin.com/in/adnanhussain0425/"
@@ -422,10 +426,9 @@
                     <input id="tbtn" type="submit" value="Let's talk" />
                 </form>
             </div>
-        </section>
-
-        <section class="ends">
-            <p>Made with love by Adnan Hussain © 2022</p>
+            <div class="ends">
+                <p>Made with love by Adnan Hussain © 2022</p>
+            </div>
         </section>
 
         <script src="https://unpkg.com/scrollreveal"></script>
