--- a/index.html
+++ b/index.html
@@ -133,10 +133,7 @@
             </div>
             <div class="about-content">
                 <div class="about-img">
-                    <img
-                        src="./img/marginalia-programming.gif"
-                        alt=""
-                    />
+                    <img src="./img/marginalia-programming.gif" alt="" />
                 </div>
                 <div class="about-text">
                     <h3>I'm Adnan Hussain</h3>
