updated skills section

--- a/index.html
+++ b/index.html
@@ -87,44 +87,6 @@
             </div>
         </section>
 
-        <!---------------- Sub Services  ------------------->
-        <!-- <section class="sub-services">
-            <div class="items">
-                <div class="sub-box">
-                    <div class="sub-img">
-                        <img src="./img/target.svg" alt="" />
-                    </div>
-                    <h3>Pixel Perfect</h3>
-                    <p>
-                        Design is not just what it looks like and feels like.
-                        Design is how it works.
-                    </p>
-                </div>
-
-                <div class="sub-box">
-                    <div class="sub-img">
-                        <img src="./img/brush.svg" alt="" />
-                    </div>
-                    <h3>High Quality</h3>
-                    <p>
-                        Getting a quality website is not an expenses but rather
-                        an investment.
-                    </p>
-                </div>
-
-                <div class="sub-box">
-                    <div class="sub-img">
-                        <img src="./img/energy.svg" alt="" />
-                    </div>
-                    <h3>Awesome Idea</h3>
-                    <p>
-                        Most common method for designing websites that work well
-                        on desktop is responsive and adaptive design
-                    </p>
-                </div>
-            </div>
-        </section> -->
-
         <!-------------- About --------------->
         <section class="about" id="about">
             <div class="heading">
@@ -299,6 +261,14 @@
                     <h3>Javascript</h3>
                 </div>
                 <div class="tech">
+                    <img src="./img/react-svgrepo-com.svg" alt="" />
+                    <h3>React</h3>
+                </div>
+                <div class="tech">
+                    <img src="./img/pngaaa.com-4144220.png" alt="" />
+                    <h3>SpringBoot</h3>
+                </div>
+                <div class="tech">
                     <img src="./img/hibernate-svgrepo-com.svg" alt="" />
                     <h3>Hibernate</h3>
                 </div>
@@ -307,33 +277,29 @@
                     <h3>Maven</h3>
                 </div>
                 <div class="tech">
-                    <img src="./img/spring-svgrepo-com.svg" alt="" />
-                    <h3>Spring</h3>
-                </div>
-                <div class="tech">
-                    <img src="./img/pngaaa.com-4144220.png" alt="" />
-                    <h3>SpringBoot</h3>
+                    <img src="./img/node-svgrepo-com.svg" alt="" />
+                    <h3>Node JS</h3>
                 </div>
                 <div class="tech">
                     <img src="./img/MySQL-Logo.wine.svg" alt="" />
                     <h3>MySQL</h3>
                 </div>
                 <div class="tech">
+                    <img src="./img/mongo-svgrepo-com.svg" alt="" />
+                    <h3>MongoDB</h3>
+                </div>
+                <div class="tech">
                     <img src="./img/icons8-github.svg" alt="" />
                     <h3>Github</h3>
                 </div>
                 <div class="tech">
-                    <img src="./img/netlify-svgrepo-com.svg" alt="" />
-                    <h3>Netlify</h3>
+                    <img src="./img/npm-svgrepo-com.svg" alt="" />
+                    <h3>NPM</h3>
                 </div>
                 <div class="tech">
                     <img src="./img/postman-icon-svgrepo-com.svg" alt="" />
                     <h3>Postman</h3>
                 </div>
-                <!-- <div class="tech">
-                    <img src="./img/aws-svgrepo-com.svg" alt="" />
-                    <h3>aws</h3>
-                </div> -->
             </div>
         </section>
 
