--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
                     <textarea
                         id="message"
                         type="text"
-                        placeholder="Enter your massage"
+                        placeholder="Enter your message"
                         cols="30"
                         rows="10"
                     ></textarea>
