updated meta description

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
         <meta charset="UTF-8" />
         <link rel="icon" href="/favicon.ico" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="description"
+            content="Meet Adnan Hussain, a passionate Full Stack Developer skilled in HTML, CSS, JavaScript, Java, React, Next.js, Tailwind CSS, Node.js, and Spring Boot. With a flair for creativity, Adnan transforms your ideas into digital realities. From web solutions to Deep Learning and Natural Language Processing, he combines innovation with technical expertise. Find him on GitHub and let Adnan breathe life into your visionary projects."
+        />
         <title>Adnan Hussain | Full Stack Developer</title>
     </head>
     <body>
